--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/giilbert/quiz#readme",
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "next": "^10.0.9",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^0.5.5"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
